Hoàn thành reponsive cho phần app (Home)

--- a/home.html
+++ b/home.html
@@ -1777,7 +1777,7 @@
 
     <section class="app" id="app-id">
       <div class="mycontainer row">
-        <div class="app-info col-6">
+        <div class="app-info col-md-6 col-sm-12">
           <h3>Ứng dụng tiện lợi dành cho người yêu điện ảnh</h3>
           <h6>Không chỉ đặt vé, bạn còn có thể bình luận phim, chấm điểm rạp và đổi quà hấp dẫn.</h6>
           <button class="btn app-download">App miễn phí - Tải về ngay!</button>
@@ -1787,7 +1787,7 @@
             <a href="#app-id">Android</a>
           </p>
         </div>
-        <div class="app-display col-6">
+        <div class="app-display col-md-6 col-sm-12">
           <div class="mobile">
             <img class="mobile-border" src="./img/mobile.png">
             <img class="mobile-slide" src="./img/app-slide.jpg">
