--- a/home.html
+++ b/home.html
@@ -1796,6 +1796,140 @@
         </div>
       </div>
     </section>
+
+    <footer class="myfooter" id="myfooter-id">
+      <div class="mycontainer">
+        <div class="row">
+          <div class="col-sm-4 col-xs-12">
+            <p class="title">TIX</p>
+            <div class="col-sm-6 col-xs-6">
+              <a href="#myfooter-id">FAQ</a>
+              <a href="#myfooter-id">Brand Guidelines</a>
+            </div>
+            <div class="col-sm-6 col-xs-6">
+              <a href="#myfooter-id">Thoả thuận sử dụng</a>
+              <a href="#myfooter-id">Chính sách bảo mật</a>
+            </div>
+          </div>
+          <div class="col-sm-4 col-xs-12">
+            <p class="title">Đối tác</p>
+            <div class="row col-sm-12 col-xs-12 partner-line">
+              <a href="https://www.cgv.vn/">
+                <img src="./img/CGV.png">
+              </a>
+              <a href="http://bhdstar.vn/">
+                <img src="./img/BHD.png">
+              </a>
+              <a href="http://galaxycine.vn/">
+                <img src="./img/Galaxy.png">
+              </a>
+              <a href="http://cinestar.com.vn/">
+                <img src="./img/Star.png">
+              </a>
+              <a href="http://lottecinemavn.com/">
+                <img src="./img/Lotte.png">
+              </a>
+            </div>
+            <div class="row col-sm-12 col-xs-12 partner-line">
+              <a href="https://www.megagscinemas.vn/">
+                <img src="./img/Mega.png">
+              </a>
+              <a href="https://www.betacineplex.vn/">
+                <img src="./img/Beta.jpg">
+              </a>
+              <a href="http://ddcinema.vn/">
+                <img src="./img/DDC.png">
+              </a>
+              <a href="https://touchcinema.com/">
+                <img src="./img/Touch.png">
+              </a>
+              <a href="https://cinemaxvn.com/">
+                <img src="./img/cnx.jpg">
+              </a>
+            </div>
+            <div class="row col-sm-12 col-xs-12 partner-line">
+              <a href="http://starlight.vn/">
+                <img src="./img/Starlight.png">
+              </a>
+              <a href="https://www.dcine.vn/">
+                <img src="./img/Dcine.jpg">
+              </a>
+              <a href="https://zalopay.vn/">
+                <img src="./img/zalopay_icon.png">
+              </a>
+              <a href="https://www.payoo.vn/">
+                <img src="./img/payoo.jpg">
+              </a>
+              <a href="https://www.vietcombank.com.vn/">
+                <img src="./img/VCB.png">
+              </a>
+            </div>
+            <div class="row col-sm-12 col-xs-12 partner-line">
+              <a href="http://www.agribank.com.vn/">
+                <img src="./img/Agribank.png">
+              </a>
+              <a href="https://www.vietinbank.vn/">
+                <img src="./img/VIETTINBANK.png">
+              </a>
+              <a href="https://www.indovinabank.com.vn/">
+                <img src="./img/IVB.png">
+              </a>
+              <a href="http://123go.vn/">
+                <img src="./img/123go.png">
+              </a>
+              <a href="http://laban.vn/">
+                <img src="./img/laban.png">
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4 col-xs-12">
+            <div class="col-xs-6">
+              <p class="title">MOBILE APP</p>
+              <a href="https://apps.apple.com/vn/app/tix-%C4%91%E1%BA%B7t-v%C3%A9-nhanh-nh%E1%BA%A5t/id615186197">
+                <img src="./img/apple-logo.png">
+              </a>
+              <a href="https://play.google.com/store/apps/details?id=vn.com.vng.phim123">
+                <img src="./img/android-logo.png">
+              </a>
+            </div>
+            <div class="col-xs-6">
+              <p class="title">SOCIAL</p>
+              <a href="https://www.facebook.com/tix.vn/">
+                <img src="./img/facebook-logo.png">
+              </a>
+              <a href="https://zalo.me/tixdatve">
+                <img src="./img/zalo-logo.png">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+          <div class="col-sm-1 col-sx-12 footer-img">
+            <img src="./img/zion-logo.jpg">
+          </div>
+          <div class="col-sm-9 col-sx-12 footer-info">
+            <p>TIX – SẢN PHẨM CỦA CÔNG TY CỔ PHẦN ZION</p>
+            <p>Địa chỉ: Z06 Đường số 13, Phường Tân Thuận Đông, Quận 7, Tp. Hồ Chí Minh, Việt Nam.</p>
+            <p>Giấy chứng nhận đăng ký kinh doanh số: 0101659783, 
+              <br>
+              đăng ký thay đổi lần thứ 30, ngày 22 tháng 01 năm 2020  do Sở kế hoạch và đầu tư Thành phố Hồ Chí Minh cấp.
+            </p>
+            <p>Số Điện Thoại (Hotline): 1900 545 436
+              <br>
+              Email: <a href="mailto:support@tix.vn">support@tix.vn</a>
+            </p>
+          </div>
+          <div class="col-sm-2 col-sx-12 footer-img">
+            <a href="http://online.gov.vn/Home/WebDetails/62782">
+            <img src="./img/bocongthuong.png">
+          </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
