Hoàn thành html và style cho phần footer

--- a/home.html
+++ b/home.html
@@ -1800,22 +1800,25 @@
     <footer class="myfooter" id="myfooter-id">
       <div class="mycontainer">
         <div class="row">
-          <div class="col-sm-4 col-xs-12">
+          <div class="col-sm-4 col-xs-12 tix-footer">
             <p class="title">TIX</p>
-            <div class="col-sm-6 col-xs-6">
-              <a href="#myfooter-id">FAQ</a>
-              <a href="#myfooter-id">Brand Guidelines</a>
+            <div class="tix-footer-container row">
+              <div class="col-sm-6 col-xs-6 tix-footer-item">
+                <a href="#myfooter-id">FAQ</a>
+                <a href="#myfooter-id">Brand Guidelines</a>
+              </div>
+              <div class="col-sm-6 col-xs-6 tix-footer-item">
+                <a href="#myfooter-id">Thoả thuận sử dụng</a>
+                <a href="#myfooter-id">Chính sách bảo mật</a>
+              </div>
             </div>
-            <div class="col-sm-6 col-xs-6">
-              <a href="#myfooter-id">Thoả thuận sử dụng</a>
-              <a href="#myfooter-id">Chính sách bảo mật</a>
-            </div>
+            
           </div>
-          <div class="col-sm-4 col-xs-12">
-            <p class="title">Đối tác</p>
+          <div class="col-sm-4 col-xs-12 partner-footer">
+            <p class="title">ĐỐI TÁC</p>
             <div class="row col-sm-12 col-xs-12 partner-line">
               <a href="https://www.cgv.vn/">
-                <img src="./img/CGV.png">
+                <img src="./img/CGV.png" style="background-color: #ffffff">
               </a>
               <a href="http://bhdstar.vn/">
                 <img src="./img/BHD.png">
@@ -1852,7 +1855,7 @@
                 <img src="./img/Starlight.png">
               </a>
               <a href="https://www.dcine.vn/">
-                <img src="./img/Dcine.jpg">
+                <img src="./img/dcine.png" style="background-color: #ffffff">
               </a>
               <a href="https://zalopay.vn/">
                 <img src="./img/zalopay_icon.png">
@@ -1882,35 +1885,38 @@
               </a>
             </div>
           </div>
-          <div class="col-sm-4 col-xs-12">
-            <div class="col-xs-6">
-              <p class="title">MOBILE APP</p>
-              <a href="https://apps.apple.com/vn/app/tix-%C4%91%E1%BA%B7t-v%C3%A9-nhanh-nh%E1%BA%A5t/id615186197">
-                <img src="./img/apple-logo.png">
-              </a>
-              <a href="https://play.google.com/store/apps/details?id=vn.com.vng.phim123">
-                <img src="./img/android-logo.png">
-              </a>
-            </div>
-            <div class="col-xs-6">
-              <p class="title">SOCIAL</p>
-              <a href="https://www.facebook.com/tix.vn/">
-                <img src="./img/facebook-logo.png">
-              </a>
-              <a href="https://zalo.me/tixdatve">
-                <img src="./img/zalo-logo.png">
-              </a>
-            </div>
+          <div class="col-sm-4 col-xs-12 app-social-footer">
+            <div class="row">
+              <div class="col-sm-6">
+                <p class="title">MOBILE APP</p>
+                <a href="https://apps.apple.com/vn/app/tix-%C4%91%E1%BA%B7t-v%C3%A9-nhanh-nh%E1%BA%A5t/id615186197">
+                  <img src="./img/apple-logo.png">
+                </a>
+                <a href="https://play.google.com/store/apps/details?id=vn.com.vng.phim123">
+                  <img src="./img/android-logo.png">
+                </a>
+              </div>
+              <div class="col-sm-6">
+                <p class="title">SOCIAL</p>
+                <a href="https://www.facebook.com/tix.vn/">
+                  <img src="./img/facebook-logo.png">
+                </a>
+                <a href="https://zalo.me/tixdatve">
+                  <img src="./img/zalo-logo.png">
+                </a>
+              </div>
+            </div class="row">
+            
           </div>
         </div>
 
         <hr>
 
         <div class="row">
-          <div class="col-sm-1 col-sx-12 footer-img">
+          <div class="col-sm-1 col-xs-12 img-left-footer">
             <img src="./img/zion-logo.jpg">
           </div>
-          <div class="col-sm-9 col-sx-12 footer-info">
+          <div class="col-sm-9 col-xs-12 contact-footer">
             <p>TIX – SẢN PHẨM CỦA CÔNG TY CỔ PHẦN ZION</p>
             <p>Địa chỉ: Z06 Đường số 13, Phường Tân Thuận Đông, Quận 7, Tp. Hồ Chí Minh, Việt Nam.</p>
             <p>Giấy chứng nhận đăng ký kinh doanh số: 0101659783, 
@@ -1922,7 +1928,7 @@
               Email: <a href="mailto:support@tix.vn">support@tix.vn</a>
             </p>
           </div>
-          <div class="col-sm-2 col-sx-12 footer-img">
+          <div class="col-sm-2 col-xs-12 img-right-footer">
             <a href="http://online.gov.vn/Home/WebDetails/62782">
             <img src="./img/bocongthuong.png">
           </a>
@@ -1930,6 +1936,7 @@
         </div>
       </div>
     </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
