Hoàn thành reponsive cho phần footer

--- a/home.html
+++ b/home.html
@@ -1800,21 +1800,21 @@
     <footer class="myfooter" id="myfooter-id">
       <div class="mycontainer">
         <div class="row">
-          <div class="col-sm-4 col-xs-12 tix-footer">
+          <div class="col-md-4 col-xs-12 tix-footer">
             <p class="title">TIX</p>
             <div class="tix-footer-container row">
               <div class="col-sm-6 col-xs-6 tix-footer-item">
                 <a href="#myfooter-id">FAQ</a>
                 <a href="#myfooter-id">Brand Guidelines</a>
               </div>
-              <div class="col-sm-6 col-xs-6 tix-footer-item">
+              <div class="col-xl-6 col-lg-12 col-xs-6 tix-footer-item">
                 <a href="#myfooter-id">Thoả thuận sử dụng</a>
                 <a href="#myfooter-id">Chính sách bảo mật</a>
               </div>
             </div>
             
           </div>
-          <div class="col-sm-4 col-xs-12 partner-footer">
+          <div class="col-md-4 col-xs-12 partner-footer">
             <p class="title">ĐỐI TÁC</p>
             <div class="row col-sm-12 col-xs-12 partner-line">
               <a href="https://www.cgv.vn/">
@@ -1885,9 +1885,9 @@
               </a>
             </div>
           </div>
-          <div class="col-sm-4 col-xs-12 app-social-footer">
+          <div class="col-md-4 col-xs-12 app-social-footer">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-sm-6 app-footer">
                 <p class="title">MOBILE APP</p>
                 <a href="https://apps.apple.com/vn/app/tix-%C4%91%E1%BA%B7t-v%C3%A9-nhanh-nh%E1%BA%A5t/id615186197">
                   <img src="./img/apple-logo.png">
@@ -1896,7 +1896,7 @@
                   <img src="./img/android-logo.png">
                 </a>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-12 col-md-6 social-footer">
                 <p class="title">SOCIAL</p>
                 <a href="https://www.facebook.com/tix.vn/">
                   <img src="./img/facebook-logo.png">
@@ -1913,10 +1913,10 @@
         <hr>
 
         <div class="row">
-          <div class="col-sm-1 col-xs-12 img-left-footer">
+          <div class="col-md-1 col-xs-12 img-left-footer">
             <img src="./img/zion-logo.jpg">
           </div>
-          <div class="col-sm-9 col-xs-12 contact-footer">
+          <div class="col-md-9 col-xs-12 contact-footer d-flex flex-column">
             <p>TIX – SẢN PHẨM CỦA CÔNG TY CỔ PHẦN ZION</p>
             <p>Địa chỉ: Z06 Đường số 13, Phường Tân Thuận Đông, Quận 7, Tp. Hồ Chí Minh, Việt Nam.</p>
             <p>Giấy chứng nhận đăng ký kinh doanh số: 0101659783, 
@@ -1928,7 +1928,7 @@
               Email: <a href="mailto:support@tix.vn">support@tix.vn</a>
             </p>
           </div>
-          <div class="col-sm-2 col-xs-12 img-right-footer">
+          <div class="col-md-2 col-xs-12 img-right-footer">
             <a href="http://online.gov.vn/Home/WebDetails/62782">
             <img src="./img/bocongthuong.png">
           </a>
