Hoàn thành trang Login

--- a/Login.html
+++ b/Login.html
@@ -19,14 +19,17 @@
     <div class="background">
       <div class="login">
         <img src="./img/login-logo.png" alt="logo" />
-        <p>
-          Đăng nhập để được nhiều ưu đãi, mua vé
-          <br />
-          và bảo mật thông tin!
-        </p>
-        <img src="./img/btn-FB.png" alt="facebook" />
-        <img src="./img/btn-Zalo.png" alt="zalo" />
-        <img src="./img/btn-Google.png" alt="google" />
+        <p>Đăng nhập để được nhiều ưu đãi, mua vé và bảo mật thông tin!</p>
+        <a>
+          <img src="./img/btn-FB.png" alt="facebook" />
+        </a>
+        <a>
+          <img src="./img/btn-Zalo.png" alt="zalo" />
+        </a>
+        <a>
+          <img src="./img/btn-Google.png" alt="google" />
+        </a>
+
         <button class="btn close-login">X</button>
       </div>
     </div>
